// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationOneClickInstallationCard/> should NOT display the message "Note that this will automatically enable Self-Service" 1`] = `
<div>
  <div
    class="card card"
  >
    <div
      class="card-header card-header"
    >
      <h3>
        One-click installation
      </h3>
    </div>
    <div
      class="card-body card-body"
    >
      <p>
        Activate the customer chat widget on your Shopify store in one click.
      </p>
      <div
        class="one-click-installation"
      >
        <div
          class="one-click-installation-inner"
        >
          <img
            alt="shopify-logo"
            class="shopify-logo"
            src="test-file-stub"
          />
          <b>
            mylittleintegration3
          </b>
        </div>
        <div
          class="actions-wrapper"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Install
          </button>
          <div
            class="component d-inline-block disconnect-button"
            id="disconnect-button-3"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-disconnect-button-3"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationOneClickInstallationCard/> should display one shopify integration and call updateOrCreateIntegration with install arguments 1`] = `
<div>
  <div
    class="card card"
  >
    <div
      class="card-header card-header"
    >
      <h3>
        One-click installation
      </h3>
    </div>
    <div
      class="card-body card-body"
    >
      <p>
        Activate the customer chat widget on your Shopify store in one click.
        <span>
           
          Note that this will automatically enable
           
          <a
            to="/app/settings/self-service"
          >
            Self-Service
          </a>
          .
        </span>
      </p>
      <div
        class="one-click-installation"
      >
        <div
          class="one-click-installation-inner"
        >
          <img
            alt="shopify-logo"
            class="shopify-logo"
            src="test-file-stub"
          />
          <b>
            mylittleintegration3
          </b>
        </div>
        <div
          class="actions-wrapper"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Install
          </button>
          <div
            class="component d-inline-block disconnect-button"
            id="disconnect-button-3"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-disconnect-button-3"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationOneClickInstallationCard/> should display one shopify integration and call updateOrCreateIntegration with uninstall arguments 1`] = `
<div>
  <div
    class="card card"
  >
    <div
      class="card-header card-header"
    >
      <h3>
        One-click installation
      </h3>
    </div>
    <div
      class="card-body card-body"
    >
      <p>
        Activate the customer chat widget on your Shopify store in one click.
        <span>
           
          Note that this will automatically enable
           
          <a
            to="/app/settings/self-service"
          >
            Self-Service
          </a>
          .
        </span>
      </p>
      <div
        class="one-click-installation"
      >
        <div
          class="one-click-installation-inner"
        >
          <img
            alt="shopify-logo"
            class="shopify-logo"
            src="test-file-stub"
          />
          <b>
            mylittleintegration3
          </b>
        </div>
        <div
          class="actions-wrapper"
        >
          <button
            class="btn btn-secondary"
            type="button"
          >
            Uninstall
          </button>
          <div
            class="component d-inline-block disconnect-button"
            id="disconnect-button-3"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-disconnect-button-3"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationOneClickInstallationCard/> should display the message "Note that this will automatically enable Self-Service" 1`] = `
<div>
  <div
    class="card card"
  >
    <div
      class="card-header card-header"
    >
      <h3>
        One-click installation
      </h3>
    </div>
    <div
      class="card-body card-body"
    >
      <p>
        Activate the customer chat widget on your Shopify store in one click.
        <span>
           
          Note that this will automatically enable
           
          <a
            to="/app/settings/self-service"
          >
            Self-Service
          </a>
          .
        </span>
      </p>
      <div
        class="one-click-installation"
      >
        <div
          class="one-click-installation-inner"
        >
          <img
            alt="shopify-logo"
            class="shopify-logo"
            src="test-file-stub"
          />
          <b>
            mylittleintegration3
          </b>
        </div>
        <div
          class="actions-wrapper"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Install
          </button>
          <div
            class="component d-inline-block disconnect-button"
            id="disconnect-button-3"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-disconnect-button-3"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
